# speckle-cpp-connectors

./: .gitignore
SpeckleConnector/: CMakeLists.txt  Connector-AC27-Debug.xctestplan  Connector.sln  Connector.vcxproj  Connector.vcxproj.filters  README.md
SpeckleConnector/Connector/: Connector.cpp  Connector.h  ConnectorResource.h  Version.h
SpeckleConnector/Connector.xcodeproj/: project.pbxproj
SpeckleConnector/Connector.xcodeproj/xcshareddata/xcschemes/: Connector-AC27-Debug.xcscheme  Connector-AC27-EN-GB-Notarise.xcscheme  Connector-AC27-EN_GB.xcscheme  Connector-AC27-Test.xcscheme
SpeckleConnector/Connector.xcworkspace/: contents.xcworkspacedata
SpeckleConnector/Connector/Database/: ModelCardDatabase.cpp  ModelCardDatabase.h
SpeckleConnector/Connector/Database/Identity/: RecordID.h
SpeckleConnector/Connector/Database/Model/Card/: CardSetting.cpp  CardSetting.h  ModelCard.cpp  ModelCard.h  ModelCardDatabase.cpp  ModelCardDatabase.h
SpeckleConnector/Connector/Event/: ConnectorEventID.h
SpeckleConnector/Connector/Interface/: ConnectorMenu.cpp  ConnectorMenu.h  ConnectorPalette.cpp  ConnectorPalette.h
SpeckleConnector/Connector/Record/Collection/: FinishProxy.cpp  FinishProxy.h  ProjectCollection.cpp  ProjectCollection.h  RecordCollection.cpp  RecordCollection.h  RootCollection.cpp  RootCollection.h
SpeckleConnector/Connector/Record/Model/: CardMover.cpp  CardMover.h  CardSetting.cpp  CardSetting.h  ModelCard.cpp  ModelCard.h  ReceiverModelCard.cpp  ReceiverModelCard.h  SenderModelCard.cpp  SenderModelCard.h
SpeckleConnector/Connector/Record/Model/Filter/: ArchicadEverythingFilter.h  ArchicadSelectionFilter.h  DirectSelectionSendFilter.cpp  DirectSelectionSendFilter.h  EverythingSendFilter.cpp  EverythingSendFilter.h  FilterMover.cpp  FilterMover.h  SendFilter.cpp  SendFilter.h
SpeckleConnector/ConnectorTests/: AccountTests.cpp  ConfigTests.cpp
SpeckleConnector/Documentation/: Doxyfile
SpeckleConnector/Make.win/: ConnectorAC27.props  ConnectorRV2024.props  ConnectorVW2024.props
SpeckleConnector/RFIX/: ConnectorFix.grc
SpeckleConnector/RFIX.WIN/: CodesignImport.apx.mui  Connector.apx.mui  Connector.rc  Connector.rc2
SpeckleConnector/RINT/: Connector.grc  ConnectorMenu.grc  SpecklePalette.grc
SpeckleConnector/RINT.Archicad/EN-GB/: Module-Info27.plist
SpeckleLib/: CMakeLists.txt  README.md  SpeckleLib17.sln  SpeckleLib17.vcxproj  SpeckleLib17.vcxproj.filters  SpeckleLibConfig.cmake.in  specklelib.pc.in
SpeckleLib/Documentation/: Doxyfile
SpeckleLib/Make.mac/: CompileResources.py  install  notarise (altool).sh  notarise.sh
SpeckleLib/Make.win/: AC27.props  RV2024.props  VW2024.props  buildResAC.bat  install.bat
SpeckleLib/RINT/: Speckle.grc
SpeckleLib/Speckle/: CMakeLists.txt  SpeckleResource.h  Version.h
SpeckleLib/Speckle/Database/: AccountDBase.cpp  AccountDBase.h  AccountDatabase.cpp  AccountDatabase.h  BIMAttributeDatabase.cpp  BIMAttributeDatabase.h  BIMElementDatabase.cpp  BIMElementDatabase.h  BIMGroupDatabase.cpp  BIMGroupDatabase.h  BIMPropertyDatabase.cpp  BIMPropertyDatabase.h
SpeckleLib/Speckle/Database/Content/: BIMRecord.cpp  BIMRecord.h  Index.h  Link.cpp  Link.h  Record.cpp  Record.h
SpeckleLib/Speckle/Database/Identity/: BIMIndex.h  BIMLink.cpp  BIMLink.h  BIMRecordID.h  Index.h  Link.cpp  Link.h  RecordID.h
SpeckleLib/Speckle/Database/Storage/ArchicadDBase/: ArchicadDBaseCore.cpp  (+1 more)
SpeckleLib/Speckle/Environment/: Addon.cpp  Addon.h  CMakeLists.txt  Environment.md  Platform.cpp  Platform.h  Project.cpp  Project.h
SpeckleLib/Speckle/Event/: CMakeLists.txt  Event.md
SpeckleLib/Speckle/Event/Subscriber/: DocStoreSubscriber.cpp  DocStoreSubscriber.h  MenuSubscriber.cpp  MenuSubscriber.h  ProjectSubscriber.cpp  ProjectSubscriber.h  SelectionSubscriber.cpp  SelectionSubscriber.h
SpeckleLib/Speckle/Event/Type/: DocStoreMergeEvent.h  MenuEvent.h  ProjectEvent.cpp  ProjectEvent.h  SelectionEvent.h
SpeckleLib/Speckle/Interface/Browser/: Functional.h  JSBinding.h  JSFunction.h  JSObject.h  JSPortal.h  NamedFunction.h  PlatformBinding.h
SpeckleLib/Speckle/Primitive/Mesh/: Mesh.cpp  Mesh.h
SpeckleLib/Speckle/Record/Attribute/: Attribute.cpp  Attribute.h  Finish.cpp  Finish.h  Storey.cpp  Storey.h
SpeckleLib/Speckle/Record/Classification/: Classified.cpp  Classified.h
SpeckleLib/Speckle/Record/Credentials/: Account.cpp  Account.h  ServerInfo.cpp  ServerInfo.h  ServerMigration.cpp  ServerMigration.h  UserInfo.cpp  UserInfo.h
SpeckleLib/Speckle/Record/Element/: Beam.cpp  Beam.h  BeamSegment.cpp  BeamSegment.h  Column.cpp  Column.h  ColumnSegment.cpp  ColumnSegment.h  DrawingElement.cpp  DrawingElement.h  Element.cpp  Element.h  GenericDrawingElement.cpp  GenericDrawingElement.h  GenericElement.cpp  GenericElement.h  GenericModelElement.cpp  GenericModelElement.h  Memo.cpp  Memo.h  ModelElement.cpp  ModelElement.h
SpeckleLib/Speckle/Record/Property/: Group.cpp  Group.h  Propertied.cpp  Propertied.h  Property.cpp  Property.h  Setting.cpp  Setting.h  Template.cpp  Template.h  Value.cpp  Value.h
SpeckleLib/Speckle/Serialise/: CMakeLists.txt  Serialisation.md
SpeckleLib/Speckle/Serialise/Collection/: FinishCollector.h  FinishProxy.h
SpeckleLib/Speckle/Serialise/Detached/: DetachedReference.cpp  DetachedReference.h  DetachedWrap.cpp  DetachedWrap.h  DetachmentManager.cpp  DetachmentManager.h
SpeckleLib/Speckle/Serialise/JSBase/: JSBaseTransport.cpp  JSBaseTransport.h
SpeckleLib/Speckle/Serialise/Types/: ArchicadRGB.h  Str256.h
SpeckleLib/Speckle/Serialise/Units/: LengthUnit.cpp  LengthUnit.h
SpeckleLib/Speckle/Utility/: BIMMemory.cpp  BIMMemory.h  Exception.h  Guid.cpp  Guid.h  Guid64.cpp  Guid64.h  String.cpp  String.h
SpeckleLib/SpeckleLib.xcodeproj/: project.pbxproj
SpeckleLib/SpeckleLib.xcodeproj/xcshareddata/xcschemes/: SpeckleLib-AC27-Debug.xcscheme  SpeckleLib-AC27-Release.xcscheme  SpeckleLib-test.xcscheme
SpeckleLib/SpeckleLib.xcworkspace/: contents.xcworkspacedata
SpeckleLib/SpeckleLibDoctest/: Guid32Tests.cpp
SpeckleLib/VSProperties/: CoreLib16.props  CoreLib17.props
(+135 files in other folders)
